--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <div class="container mt-3">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="index.html">
                 <span class="mr-2"><img src="images/dsc.png" width="64px" height="32px"></span>
                 FOOD BAZAAR</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -78,6 +78,10 @@
                                 <div class="form-group">
                                   <label for="exampleInputPassword1">Mobile</label>
                                   <input type="number" class="form-control" id="phone" placeholder="Mobile Number">
+                                </div>
+                                <div class="form-group">
+                                  <label for="address">Address</label>
+                                  <input type="text" class="form-control" id="address" placeholder="Enter location">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">Password</label>
