--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                   <a class="nav-link" href="donate.html">Donate <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="/#about">About <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/#register">Register</a>
+                  <a class="nav-link" href="#register">Register</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/#login">Login</a>
+                  <a class="nav-link" href="#login">Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="publisherDashboard.html">Publisher</a>
