--- a/publisherDashboard.html
+++ b/publisherDashboard.html
@@ -144,7 +144,7 @@
         <div class="col-sm-9 "> 
           <div class="donateButton " >
 
-            <a href="/donate" style="text-decoration: none;"><button type="button" class="donate btn btn-info mt-4 mb-0" style="float:right;position:static;background:#17a2b8" data-toggle="modal" data-target="#exampleModalCenter">
+            <a href="donate.html" style="text-decoration: none;"><button type="button" class="donate btn btn-info mt-4 mb-0" style="float:right;position:static;background:#17a2b8" data-toggle="modal" data-target="#exampleModalCenter">
               Donate<i class="fa mx-2 fa-angle-double-right" aria-hidden="true"></i>
             </button></a>
           </div>
