--- a/authSubscriber.html
+++ b/authSubscriber.html
@@ -20,7 +20,7 @@
       <div class="container mx-auto my-2">
 
         <a class="navbar-brand " href="/" style="font-size: large; color: #EDBB00;">
-          <span class="mr-2 "><img src="/images/dsc.png" width="64px" height="32px"></span>
+          <span class="mr-2 "><img src="images/dsc.png" width="64px" height="32px"></span>
          <b>FOOD BAZAAR</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
