--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="donate.html">Donate <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/#about">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html#about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="publisherDashboard.html">Donor</a>
@@ -64,7 +64,7 @@
                 <div class="carousel-caption">
                     <h2 class="animated bounceInRight" style="animation-delay: 1s">We Deliver Your Food To The Needed Ones.</h2>
                     <h3 class="animated bounceInLeft" style="animation-delay: 2s">We Are The Team Of DSCMBM</h3>
-                    <p class="animated bounceInRight" style="animation-delay: 3s"><a href="/donate" style="text-decoration: none;">Donate</a></p>
+                    <p class="animated bounceInRight" style="animation-delay: 3s"><a href="donate.html" style="text-decoration: none;">Donate</a></p>
                 </div>
             </div>
             <div class="carousel-item ">
@@ -72,7 +72,7 @@
                 <div class="carousel-caption">
                     <h2 class="animated slideInDown" style="animation-delay: 1s">We Deliver Your Food To The Needed Ones.</h2>
                     <h3 class="animated fadeInUp" style="animation-delay: 2s">We Are The Team Of DSCMBM</h3>
-                    <p class="animated zoomIn" style="animation-delay: 3s;"><a href="/donate" style="text-decoration: none;">Donate</a></p>
+                    <p class="animated zoomIn" style="animation-delay: 3s;"><a href="donate.html" style="text-decoration: none;">Donate</a></p>
                 </div>
             </div>
             <div class="carousel-item ">
@@ -80,7 +80,7 @@
                 <div class="carousel-caption">
                     <h2 class="animated zoomIn" style="animation-delay: 1s">We Deliver Your Food To The Needed Ones.</h2>
                     <h3 class="animated fadeInLeft" style="animation-delay: 2s">We Are The Team Of DSCMBM</h3>
-                    <p class="animated zoomIn" style="animation-delay: 3s; "><a href="/donate" style="text-decoration: none;">Donate</a></p>
+                    <p class="animated zoomIn" style="animation-delay: 3s; "><a href="donate.html" style="text-decoration: none;">Donate</a></p>
                 </div>
             </div>
 
@@ -135,7 +135,7 @@
             <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sequi dignissimos pariatur unde a nam architecto ad dolorum quisquam deleniti amet doloribus blanditiis voluptates, quasi voluptatum! Debitis alias nisi eius, incidunt nihil, voluptatibus doloribus molestiae nemo quo perspiciatis earum obcaecati?</p>
         </div>
         <div class="col-md-5 m-auto">
-        <img src="/images/carousel3.jpg" alt="" class="bd-placeholder-img d-flex bd-placeholder-img-lg m-auto featurette-image img-fluid mx-auto" width="300" height="300" >
+        <img src="images/carousel3.jpg" alt="" class="bd-placeholder-img d-flex bd-placeholder-img-lg m-auto featurette-image img-fluid mx-auto" width="300" height="300" >
         </div>
       </div>
 
@@ -146,7 +146,7 @@
           <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus porro aut quam inventore maiores temporibus accusamus, placeat recusandae officia? Ipsa tempore vel quibusdam cum consequuntur quas modi ipsam commodi praesentium. Reprehenderit a veniam nulla ex eos odio nostrum! Est, nam?</p>
         </div>
         <div class="col-md-5 order-md-1 m-auto">
-        <img src="/images/carousel2.jpeg" class="bd-placeholder-img d-flex m-auto bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="" width="300" height="300">
+        <img src="images/carousel2.jpeg" class="bd-placeholder-img d-flex m-auto bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="" width="300" height="300">
         </div>
       </div>
 
@@ -157,7 +157,7 @@
           <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, saepe laborum? Blanditiis expedita temporibus hic dolor distinctio dolore, similique dolores iusto enim inventore, eveniet error animi quidem voluptatem quam illo dicta non. Obcaecati dignissimos nemo tempore necessitatibus totam quo expedita!</p>
         </div>
         <div class="col-md-5 m-auto">
-        <img src="/images/carousel1.svg" class="bd-placeholder-img m-auto d-flex bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="" width="300" height="300">
+        <img src="images/carousel1.svg" class="bd-placeholder-img m-auto d-flex bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="" width="300" height="300">
 
         </div>
       </div>
@@ -171,7 +171,7 @@
         <div class='row'>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/tshirt.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/tshirt.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">T-shirt</h5>
 
@@ -180,7 +180,7 @@
             </div>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/shoes.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/shoes.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">Shoes</h5>
 
@@ -189,7 +189,7 @@
             </div>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/earphone.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/earphone.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">EarPhone</h5>
 
@@ -198,7 +198,7 @@
             </div>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/jeans.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/jeans.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">Jeans</h5>
 
@@ -207,7 +207,7 @@
             </div>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/jwellary.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/jwellary.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">Jwellary</h5>
 
@@ -216,7 +216,7 @@
             </div>
             <div class="col-md-4 col-12 col-lg-4 mt-1">
                 <div class="card mb-3 RewardsCards" >
-                    <img class="card-img-top" width="350px" height="250px" src="/images/watch.jpg" alt="Card image cap" />
+                    <img class="card-img-top" width="350px" height="250px" src="images/watch.jpg" alt="Card image cap" />
                     <div class="card-body">
                       <h5 class="card-title text-center">Watch</h5>
 
