--- a/publisherDashboard.html
+++ b/publisherDashboard.html
@@ -19,7 +19,7 @@
       <div class="container mx-auto my-2">
 
         <a class="navbar-brand " href="/" style="font-size: large; color: #EDBB00;">
-          <span class="mr-2 "><img src="/images/dsc.png" width="64px" height="32px"></span>
+          <span class="mr-2 "><img src="images/dsc.png" width="64px" height="32px"></span>
          <b>FOOD BAZAAR</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="donate.html">Donate <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/#about">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html#about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="publisherDashboard.html">Donor</a>
@@ -181,7 +181,7 @@
       <div class='row'>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/tshirt.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/tshirt.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title ">T-shirt</h5>
              <p>150 Points</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/shoes.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/shoes.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title text-center">Shoes</h5>
                     <p>200 Points</p>
@@ -201,7 +201,7 @@
           </div>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/earphone.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/earphone.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title text-center">EarPhone</h5>
                     <p>50 Points</p>
@@ -211,7 +211,7 @@
           </div>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/jeans.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/jeans.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title text-center">Jeans</h5>
                     <p>250 Points</p>
@@ -221,7 +221,7 @@
           </div>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/jwellary.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/jwellary.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title text-center">Jwellary</h5>
                     <p>450 Points</p>
@@ -231,7 +231,7 @@
           </div>
           <div class="col-md-4 col-12 col-lg-4 mt-1">
               <div class="card mb-3 RewardsCards" >
-                  <img class="card-img-top" width="350px" height="250px" src="/images/watch.jpg" alt="Card image cap" />
+                  <img class="card-img-top" width="350px" height="250px" src="images/watch.jpg" alt="Card image cap" />
                   <div class="card-body text-center">
                     <h5 class="card-title text-center">Watch</h5>
                     <p>180 Points</p>
