--- a/donate.html
+++ b/donate.html
@@ -20,7 +20,7 @@
       <div class="container mx-auto my-2">
 
         <a class="navbar-brand " href="/" style="font-size: large; color: #EDBB00;">
-          <span class="mr-2 "><img src="/images/dsc.png" width="64px" height="32px"></span>
+          <span class="mr-2 "><img src="images/dsc.png" width="64px" height="32px"></span>
          <b>FOOD BAZAAR</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="donate.html">Donate <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/#about">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html#about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="publisherDashboard.html">Donor</a>
@@ -90,7 +90,7 @@
                             <img src={SelectRoom} class="w-100" alt="image" />
                         </figure> -->
                         <figure>
-                          <img src="/images/form.svg" class="w-100" alt="image">
+                          <img src="images/form.svg" class="w-100" alt="image">
                         </figure>
 
 
